tests/specs/ecosystem/badrap/valita/0_3_3.test
badrap/valita/0.3.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'AbstractType<Output | undefined>'.
  optional(): Optional<Output> {
  ~~~~~~~~
    at file://<tmpdir>/src/index.ts:248:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Type<Infer<T[number]>>'.
  toTerminals(func: (t: TerminalType) => void): void {}
  ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:324:3

Found 2 errors.

error: Type checking failed.

